--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,81 @@
-flask==3.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+audioop-lts==0.2.1
+blinker==1.9.0
+CacheControl==0.14.2
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+discord.py==2.5.2
+distro==1.9.0
+firebase-admin==6.7.0
+Flask==3.1.0
+flask-cors==6.0.0
+frozenlist==1.6.0
 fuzzywuzzy==0.18.0
-python-Levenshtein==0.27.1
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.1
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
 gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+Levenshtein==0.27.1
+MarkupSafe==3.0.2
+msgpack==1.1.0
+multidict==6.4.3
+openai==1.76.0
+outcome==1.3.0.post0
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.2
+pydantic_core==2.33.1
+PyJWT==2.10.1
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dotenv==1.1.0
+python-Levenshtein==0.27.1
+RapidFuzz==3.13.0
+requests==2.32.3
+rsa==4.9
+selenium==4.31.0
+setuptools==80.9.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+tqdm==4.67.1
+trio==0.29.0
+trio-websocket==0.12.2
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+uritemplate==4.1.1
+urllib3==2.3.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+yarl==1.20.0
