--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==25.3.0
 audioop-lts==0.2.1
 blinker==1.9.0
 CacheControl==0.14.2
+cachelib==0.13.0
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
@@ -19,6 +20,7 @@ distro==1.9.0
 firebase-admin==6.7.0
 Flask==3.1.0
 flask-cors==6.0.0
+Flask-Session==0.8.0
 frozenlist==1.6.0
 fuzzywuzzy==0.18.0
 google-api-core==2.24.2
@@ -45,6 +47,7 @@ jiter==0.9.0
 Levenshtein==0.27.1
 MarkupSafe==3.0.2
 msgpack==1.1.0
+msgspec==0.19.0
 multidict==6.4.3
 openai==1.76.0
 outcome==1.3.0.post0
@@ -73,6 +76,7 @@ trio==0.29.0
 trio-websocket==0.12.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
+Unidecode==1.4.0
 uritemplate==4.1.1
 urllib3==2.3.0
 websocket-client==1.8.0
